--- a/02-MPElectricSystemsHu/Styles/villanyszereles.css
+++ b/02-MPElectricSystemsHu/Styles/villanyszereles.css
@@ -72,6 +72,11 @@
    display: flex;
    flex-flow: column;
    justify-content: flex-start;
+   align-items: center;
+}
+
+.electrician-references .gallery-container p {
+   text-align: center;
 }
 
 .electrician-references .gallery-container h3 {
